# Pyneapple

./: pyproject.toml
localhost/: main.py  read_shapefile.py  startJVM.py
notebooks/data/LACity/: read_shapefile.py
